    - UserAccount screens (find/delete, edit UA (with tabs for preferences,
      themes, login, history, visit history, groups, change password))
    - UserGroup screens (find/delete, edit (tab for users in group))
    - Artifact Group (find/delete, edit (tab for artifacts in group))
    - Authorization screen (find/delete, edit (tabs for record, service))
  - Artifact Info screens (with in/out references for all)

===========================================================================
Features designed, but not to be included in 1.0 series
===========================================================================

- XML Screens
  - Screen tree elements
  - Screen section-iterate pagination
  - Screen form automatic client JS validation for service in-parameters
    for matches, number-range, text-length, text-letters, time-range,
    credit-card.@types
  - Dynamic Screens (database-driven: DynamicScreen* entities)
  - Dynamic Forms (database-driven: DynForm* entities)
  - Templates for cwiki render mode
- Service Facade
  - Service database-driven semaphores
  - Service runners for proxy service calls to another Moqui server via
    HTTP, JMS, and RMI (TX enlisted), email, XMPP
- Entity Facade
  - EntitySync tool
  - Database-driven dynamic view entity
  - Entity complex aliases in views
  - View entity view-link.econdition* support (EntityFindBuilder:196)
- Artifact Execution Facade
  - Artifact Tar-pitting based on configuration in db
  - Call ArtifactExecutionFacade.push() (to track, check authz, etc) for
    other types of artifacts (if/as determined to be helpful), including:
    Component, Webapp, Screen Section, Screen Form, Screen Form Field,
    Template, Script, Entity Field
  - Persist data about authz failures (in db, in addition to log)
- Tools Screens
  - Security screens
    - Tarpit screen (find/update/delete,add screen)
    - Tarpitted screen (find/update/delete,add screen)